# template-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish-pypi.yml  security-scan-codeql.yml
doc/: development.rst  packaging.rst
notebooks/: 01 - Dummy.ipynb
src/module_name/: dummy.py
